<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    app:backgroundTint="@color/white"
    android:orientation="vertical"
    android:padding="@dimen/default_padding"
    tools:context=".SignUpActivity">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="@dimen/default_skiptop">
       <ImageView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:src="@drawable/ic_back"
           android:layout_marginTop="@dimen/default_backtop"/>
       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/skip_btn"
           android:textColor="@color/primary"
           android:fontFamily="@font/poppinsbold"
           android:layout_marginTop="@dimen/default_skiptop"
           android:gravity="right"/>
   </LinearLayout>

    <ImageView
        android:layout_width="@dimen/default_logosize"
        android:layout_height="@dimen/default_logosize"
        android:src="@drawable/logo"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/default_logotop"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_title"
        android:textSize="35sp"
        android:layout_gravity="center"
        android:textColor="@color/primary"
        android:fontFamily="@font/poppinsbold"/>


        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/default_edit_text_height"
            android:hint="@string/username"
            android:paddingLeft="20dp"
            android:fontFamily="@font/poppinsregular"
            android:background="@drawable/edit_text"
            android:textColor="@color/black"
            android:layout_gravity="center_vertical"
            android:drawableStart="@drawable/ic_username"
            android:drawablePadding="15dp"
            android:textColorHint="@color/second"/>


        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/default_edit_text_height"
            android:hint="@string/email"
            android:paddingLeft="@dimen/default_padding"
            android:fontFamily="@font/poppinsregular"
            android:textColor="@color/black"
            android:drawableStart="@drawable/ic_email"
            android:background="@drawable/edit_text"
            android:layout_marginTop="@dimen/default_padding"
            android:drawablePadding="15dp"
            android:layout_gravity="center_vertical"
            android:textColorHint="@color/second"/>


        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/default_edit_text_height"
            android:hint="@string/password"
            android:paddingLeft="@dimen/default_padding"
            android:fontFamily="@font/poppinsregular"
            android:textColor="@color/black"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="@dimen/default_padding"
            android:background="@drawable/edit_text"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="15dp"
            android:textColorHint="@color/second"/>


        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/default_edit_text_height"
            android:hint="@string/_repassword"
            android:paddingLeft="@dimen/default_padding"
            android:layout_marginTop="@dimen/default_padding"
            android:background="@drawable/edit_text"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="15dp"
            android:fontFamily="@font/poppinsregular"
            android:textColor="@color/black"
            android:layout_gravity="center_vertical"
            android:textColorHint="@color/second"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/signup_btn"
        android:background="@drawable/gradient_title"
        android:fontFamily="@font/poppinssemibold"
        android:textSize="20sp"
        android:textColor="@color/second"
        app:backgroundTint="@color/primary"
        android:layout_marginTop="40dp"/>

</LinearLayout>