<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:backgroundTint="@color/white"
    android:padding="@dimen/default_padding"
    tools:context=".ResetPasswordActivity">

   <ImageView
       android:id="@+id/skip_btn"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:src="@drawable/ic_back"
       android:layout_marginTop="@dimen/default_skiptop"/>

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_password"
        android:layout_below="@+id/skip_btn"
        android:layout_centerHorizontal="true"
        android:textColor="@color/primary"
        android:fontFamily="@font/poppinsbold"
        android:textSize="32sp"
        android:layout_marginTop="100dp"/>

    <TextView
        android:id="@+id/forgot_password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_password_text"
        android:fontFamily="@font/poppinsregular"
        android:textSize="20sp"
        android:textColor="@color/second"
        android:layout_below="@+id/forgot_password"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:layout_marginTop="80dp"/>

    <EditText
        android:id="@+id/forgot_password_edit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_edit_text_height"
        android:background="@drawable/edit_text"
        android:layout_marginTop="80dp"
        android:layout_below="@+id/forgot_password_text"
        android:layout_centerHorizontal="true"
        android:textColor="@color/black"
        android:fontFamily="@font/poppinsregular"
        android:hint="@string/reset_email"
        android:paddingLeft="@dimen/default_padding"
        android:textColorHint="@color/second"
        />

    <Button
        android:id="@+id/reset_sent_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_edit_text_height"
        android:text="@string/reset_password_btn"
        android:background="@drawable/gradient_title"
        app:backgroundTint="@color/primary"
        android:fontFamily="@font/poppinssemibold"
        android:textSize="18sp"
        android:textColor="@color/second"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/forgot_password_edit"
        android:layout_marginTop="100dp"/>

</RelativeLayout>