<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/primary"
    app:backgroundTint="@color/primary"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="150dp"
        android:src="@drawable/logo"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:background="@drawable/welcomepagewhite"
        app:backgroundTint="@color/white"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:layout_marginTop="40dp"
            android:textSize="70sp"
            android:textColor="@color/second"
            android:fontFamily="@font/poppinsbold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subtitle"
            android:fontFamily="@font/poppinslight"
            android:layout_marginTop="5dp"
            android:textSize="30sp"
            android:textColor="@color/second" />

        <Button
            android:id="@+id/commencer"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/buttonwelcome"
            android:textColor="@color/black"
            android:fontFamily="@font/poppinsbold"
            android:gravity="center"
            app:backgroundTint="@color/primary"
            android:textAllCaps="false"
            android:layout_marginTop="60dp"
            android:text="@string/startText"/>
        </LinearLayout>

</LinearLayout>